# xcube-zenodo

./: .gitignore  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.yml  pyproject.toml
.github/workflows/: unittest-workflow.yml
examples/: 01_lazy_access_tif.ipynb  01_zenodo_data_store.ipynb  02_lazy_access_netcdf.ipynb  02_zenodo_data_store_preload_rar.ipynb  02_zenodo_data_store_preload_zip.ipynb  03_lazy_access_zarr.ipynb  03_preload_netcdf.ipynb  03_zenodo_data_store_preload_zarr.ipynb  04_preload_zip.ipynb  04_zenodo_data_store_preload_nested_zip.ipynb  05_preload_rar.ipynb  05_zenodo_data_store_preload_zarr_wo_zarr_extension.ipynb  debug.py  list_data_ids.py  zenodo_data_store.ipynb  zenodo_data_store_preload.ipynb  zenodo_data_store_preload_nested_zip.ipynb  zenodo_data_store_preload_zarr.ipynb  zenodo_data_store_preload_zarr_wo_zarr_extension.ipynb  zenodo_data_store_preload_zip.ipynb
test/: __init__.py  get_all_files.py  test_preload.py  test_store.py  test_utils.py
test/cassettes/test_store/: ZenodoDataStoreTest.test_preload_data_download_fails.yaml
test/zenodo_cache/6453099/diaz2016_inputs_raw.zarr/: .zmetadata
test/zenodo_cache/6453099/diaz2016_inputs_raw.zarr/capmovefactor/: .zattrs
test/zenodo_cache/6453099/diaz2016_inputs_raw.zarr/cci/: .zattrs  0
test/zenodo_cache/6453099/diaz2016_inputs_raw.zarr/coef/: .zarray  .zattrs  0
test/zenodo_cache/6453099/diaz2016_inputs_raw.zarr/coefs/: .zarray  (+3 more)
xcube_zenodo/: __init__.py  _utils.py  constants.py  plugin.py  preload.py  store.py  utils.py  version.py
(+162 files in other folders)
